--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   get: ^4.6.5
   shared_preferences: ^2.2.0
   phone_number: ^2.0.1
+  contacts_service: ^0.6.3
 
 dev_dependencies:
   flutter_test:
